# rsoi-project

./: .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: classroom.yml  deploy.yml
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/lib/: api.ts  auth.ts  config.ts  idp.ts  jwt.ts  labels.ts
helm/: cluster-issuer.yaml
helm/kafka/: Chart.yaml  values.yaml
helm/postgres/: Chart.yaml  values.yaml
helm/service/: Chart.yaml  values.yaml
helm/values/: car-service.yaml  frontend.yaml  gateway-service.yaml  identity-provider.yaml  payment-service.yaml  rental-service.yaml  statistics-consumer.yaml  statistics-service.yaml
postgres/: 20-create-databases.sh
postgres/scripts/: db-v3.sql
scripts/: generate-jwt-keys.sh  k8s-bootstrap.sh  k8s-deploy.sh  make-ci-kubeconfig.sh
services/car-service/: entrypoint.sh  requirements.txt
services/gateway-service/: Dockerfile  entrypoint.sh  requirements.txt
services/identity-provider/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  requirements.txt
services/payment-service/: .dockerignore  entrypoint.sh
services/rental-service/: Dockerfile  entrypoint.sh
services/shared/authlib/: README.md  pyproject.toml
services/shared/authlib/authlib/: __init__.py  jwks.py  middleware.py  permissions.py  user.py
services/shared/authlib/tests/: conftest.py  test_jwt_authentication.py
services/statistics-service/: .dockerignore  Dockerfile  entrypoint.sh  requirements.txt
(+99 files in other folders)
